# videosdb

./: .firebaserc  .gitignore  .pylintrc  Pipfile  README  TODO.txt  Taskfile.yaml  Taskfile.yml  amplify.yml  buildspec.yml  cloudbuild-generic prod.yaml  cloudbuild-generic.yaml  cloudbuild.yaml  config.py  config.yaml  creds.json  cron.sh  docker-compose.aws.yml  docker-compose.debug.yml  docker-compose.fileserver.yml  docker-compose.gcp.yml  docker-compose.yml  env_file.sadhguru.txt  firebase.json  ipfs_root_hash.txt  localbuild.sh  netlify.toml  nginx-site.conf  nuxt.config.js  package.json  publish.py  pyproject.toml  requirements-dev.txt  requirements.freezed.txt  requirements.txt  run-fileserver.sh  run.sh  torrent-trackers.txt  vetur.config.js  videos_db.py  (+1 more)
backend/: .dockerignore  .gitignore  Dockerfile  add-to-ipfs.sh  app.yaml  asdf.py  backend.cron  buildspec.yml  cloudbuild-generic.prod.yaml  cloudbuild-generic.yaml  cloudbuild.yaml  creds.json  cron.sh  db.hy  db_hy.hy  entrypoint.sh  firestore.indexes.json  main.py  manage.py  pyproject.toml  pyrightconfig.json  requirements.txt  run.py  run.sh  video.json  videos.txt  youtube.com_cookies.txt  youtube_api_v3_discovery.json
backend/clojure/: project.clj  videosdb.core.clj
backend/clojure/.calva/output-window/: output.calva-repl
backend/clojure/app/: CHANGELOG.md
backend/clojure/src/videosdb/: core.clj  ipfs.clj  main.clj  settings.clj  tests_by_ia.clj  utils.clj
backend/clojure/test/: test_all.clj  tests_by_ia.clj
backend/js/: app.js  firebase-settings.js  index.js  package.json
backend/logs/: .gitignore
backend/project/: settings-fileserver.py  settings-ipfs.py  settings-local.py  settings-nithyananda.py  settings-sadhguru.py  settings.py  urls.py  wsgi.py
backend/scripts/: cachetest.py  cleanup_dangling_items.py  download_all.py  populate_ipfs_fields.py  populate_transcript.py
backend/tests/: cloudbuild.yaml  docker-compose.cloudbuild.yml  docker-compose.yml  test_all.py  test_downloader.py  test_yt_api.py
backend/tests/test_data/: channel-UCcYzLCs3zrQIBVHYA1sK2sw.response.json  channelSections-UCcYzLCs3zrQIBVHYA1sK2sw.response.json  playlist-PL3uDtbb3OvDMz7DAOBE0nT0F9o7SV5glU.response.json  playlist-UUcYzLCs3zrQIBVHYA1sK2sw.response.json  playlist-empty.response.json  playlist.response.json  playlistItems-PL3uDtbb3OvDMz7DAOBE0nT0F9o7SV5glU.response.1.json  playlistItems-PL3uDtbb3OvDMz7DAOBE0nT0F9o7SV5glU.response.2.json  playlistItems-UUcYzLCs3zrQIBVHYA1sK2sw.response.json  test_playlistItems_info.json  test_related_videos.json  video-FBYoZ-FgC84.response.json  video-HADeWBBb1so.response.json  video-J-1WVf5hFIk.response.json  video-QEkHcPt-Vpw.response.json  video-ZhI-stDIlCE.response.json  video-ed7pFle2yM8.response.json  video-gavq4LM8XK0.response.json
backend/utils/: .gitignore  backend.cron  create_postgres_db.sql  create_postgres_db.sql.bak  crontab.example  deploy-frontend.sh  download-from-ecr.sh  entrypoint.sh  install_certificates.py  ipythonshell.sh  json-caching-proxy.json.config  load-dotenv  request-certs.sh  start_api_proxy.sh  vars.txt
backend/utils/ipython_config/profile_default/: ipython_config.py
backend/videosdb/: __init__.py  __main__.py  admin.py  code.py  creds-worpdress.json  creds.json  db.py  downloader.py  ipfs.py  models.py  publisher.py  run.py  serializers.py  settings.py  tests.py  utils.py  views.py  youtube_api.py  youtube_api_hy.hy
backend/videosdb/backend/: .#downloader.py  code.py  creds.json  db.py  downloader.py  ipfs.py  lbry.py  publisher.py  wordpress.py  youtube_api.py
backend/videosdb/keys/: testing-cloudbuild.json  testing.json
backend/videosdb/lisp/: youtube_api.hy
backend/videosdb/management/commands/: videosdb.py
backend/videosdb/migrations/: 0001_delete_publication.py  0002_auto_20190211_1445.py  0002_auto_20210208_0317.py  0003_alter_video_related_videos.py  0004_auto_20190211_1730.py  0004_auto_20211025_1336.py  0005_delete_related_videos_relations.py  0006_auto_20211026_2141.py  0006_rename_table.py  0007_auto_20211031_0134.py  0007_remove_dangling_migrations.py  0008_auto_20211102_0313.py  0009_auto_20190212_0725.py  0009_auto_20211102_0318.py  0012_video_transcript.py  0016_auto_20201223_1101.py  0017_auto_20201223_1227.py  0018_auto_20201224_1211.py  0019_auto_20201224_1219.py  0021_auto_20201225_1512.py  0022_video_thumbnail_id.py  0031_auto_20210103_2339.py  0034_auto_20210106_2304.py  0038_auto_20210113_1153.py  0041_auto_20210117_1908.py  0041_auto_20210121_1515.py  0042_auto_20210119_1115.py  0043_auto_20210120_0127.py  0044_merge_20210121_2151.py  0045_video_transcript_available.py  0046_auto_20210122_1338.py  regenerate_tags.py
backend/videosdb/test_data/: test_playlist_info.json  test_video_info.json
backend/website/: ipfs  nginx.conf  wordpress
backend_basilisp/: __init__,py  project.edn  pyproject.toml  run.py
backend_basilisp/src/videosdb/: downloader.lpy  publisher.lpy  run.lpy  utils.lpy
backend_basilisp/videosdb/: db.lpy  ipfs.lpy  run.lpy  settings.lpy  youtube_api.lpy
db/: Dockerfile  (+4 more)
tests/: cloudbuild.yaml  pyproject.toml  test_all.py
tests/end2end/: Dockerfile  cloudbuild.yaml  docker-compose.cloudbuild.yml  docker-compose.yml  run.sh
tests/end2end/utils/firebase-emulator/: .firebaserc  Dockerfile  entrypoint.sh  firebase.json
tests/end2end/utils/firestore-emulator/: Dockerfile  firebase.json
tests/uptime/: test.py
(+346 files in other folders)
