[tool.poetry]
name = "videosdb"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.5"
Django = "^3.1.4"
Autologging = "^1.3.2"
python-wordpress-xmlrpc = "^2.3"
youtube-transcript-api = "^0.3.1"
Jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]
ipython = "*"
ipdb = "*"
django-extensions = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
