[tool.poetry]
name = "videosdb"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">3.7.0,<3.7.1 || >3.7.1,<4"
isodate = "^0.6.0"
google-cloud-dns = "^0.32.1"
aiostream = "latest"
google-cloud-firestore = "latest"
youtube-transcript-api = {git = "https://github.com/kovan/youtube-transcript-api", rev = "base_exception"}
python-slugify = "^5.0.2"
anyio = "latest"
async_generator = "^1.10"
httpx = {extras = ["http2"], version = "^0.23.0"}
Autologging = "^1.3.2"
fnc = "^0.5.3"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.4"
pylint = "^2.6.0"
autopep8 = "^1.5.4"
pytest-asyncio = "^0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
